@@ -11,6 +11,7 @@
 #                                                                                          #
 ############################################################################################
 
+[108] --> Fix item procs of Reign of the Dead / Reign of the Unliving, cooldown should be used.
 [107] --> Fix Item - Shaman T10 Elemental 4P Bonus.
 [106] --> Fix buff Frostmourne.
 [105] --> Add [MOD] CharacterHistory.
